# PLOS-for-Mac

./: .gitignore  CHANGELOG.en.md  CHANGELOG.ja.md  CHANGELOG.ko.md  CONTRIBUTING.ja.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.ja.md  PERFORMANCE.ko.md  PERFORMANCE.md  Package.swift  README.en.md  README.ja.md  README.ko.md  README.md  verify_auth.py
sidecar/: .env.example  pyproject.toml
sidecar/local_ai_core/: __init__.py  auth.py  chat.py  chunker.py  classification.py  config.py  container.py  db.py  embedding.py  executor.py  external_providers.py  followup_resolver.py  indexing.py  intent_parser.py  language_utils.py  local_inference.py  local_planner.py  main.py  memory_service.py  model_catalog.json  model_manager.py  models.py  parsers.py  reasoning_pipeline.py  response_composer.py  retrieval.py  room_storage.py  schema.py  streaming.py  vector_store.py  verifier.py  web_retrieval.py
sidecar/scripts/: benchmark_local_chat.py  memory_recall_longevity_sim.py  perf_chat_benchmark.py  stream_chat_turn_report.py
sidecar/searxng/: docker-compose.yml
sidecar/tests/: conftest.py  test_agentic_loop.py  test_api_flow.py  test_async_repository_backend.py  test_classifier.py  test_create_app_override.py  test_db_searxng_automation.py  test_doc_metadata_api.py  test_executor_conversation_cache.py  test_executor_map_reduce.py  test_extensions_kernel.py  test_helper_async_safety.py  test_inference_runtime_lifecycle.py  test_language_utils.py  test_local_chat_v2_timeout.py  test_local_inference_sanitize.py  test_local_inference_sanitize_misc.py  (+25 more)
(+241 files in other folders)
