[project]
name = "local-ai-core-sidecar"
version = "0.2.0"
description = "FastAPI sidecar for Local AI Core for Mac"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.28.0",
  "lancedb>=0.22.0",
  "numpy>=2.2.0",
  "pypdf>=5.3.0",
  "pytesseract>=0.3.13",
  "Pillow>=11.1.0",
  "pdf2image>=1.17.0",
  "pypdfium2>=4.30.0",
  "rapidocr_onnxruntime>=1.4.4",
  "cryptography>=3.1",
  "huggingface-hub>=0.30.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_ai_core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
